[package]
name = "unzpack"
version = "0.0.0"
description = "A library to persist ZIP content bytes into a file and extract its content on file system."
authors = ["Jose Quintana <git.io/joseluisq>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joseluisq/unzpack"
documentation = "https://docs.rs/unzpack"
readme = "README.md"
keywords = ["zip", "archive", "unzip"]
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

[dependencies]
zip = "0.5"
